--- a/about.html
+++ b/about.html
@@ -64,11 +64,11 @@
        </div>
     </section>
 
-  
+
 
     <footer>
       <p>
-        Website Footer, Copyright &copy; 2020
+          Website Footer - THIS IS FOR AN ACADEMIC PROJECT
       </p>
     </footer>
 
