--- a/services.html
+++ b/services.html
@@ -146,7 +146,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt suscipi
 
     <footer>
       <p>
-        Website Footer, Copyright &copy; 2020
+        Website Footer
       </p>
     </footer>
 
