--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
     <footer>
       <p>
-        Website Footer
+          Website Footer - THIS IS FOR AN ACADEMIC PROJECT  
       </p>
     </footer>
 
