--- a/services.html
+++ b/services.html
@@ -146,7 +146,7 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tincidunt suscipi
 
     <footer>
       <p>
-        Website Footer
+        Website Footer - THIS IS FOR AN ACADEMIC PROJECT
       </p>
     </footer>
 
